--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     networks:
       - net-php
     volumes:
-      - ./www:/var/www/html:ro
+      - ./www:/var/www/html:rw
       - ./nginx/conf.d/:/etc/nginx/conf.d:ro
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./log/nginx:/var/log/dnmp/:rw
@@ -24,10 +24,11 @@ services:
       - net-mysql
       - net-redis
     volumes:
-      -  ./www:/var/www/html:ro
+      -  ./www:/var/www/html:rw
       - ./php/conf/php.ini:/usr/local/etc/php/php.ini:ro
       - ./php/conf/php-fpm.conf:/usr/local/etc/php-fpm.d/www.conf:rw
       - ./log/php/:/var/log/dnmp/:rw
+      - /usr/share/zoneinfo/Asia/Shanghai:/etc/localtime:ro
 
   mysql:
     image: mysql:5.7.20
