--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,13 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./log/nginx:/var/log/dnmp/:rw
       - /usr/share/zoneinfo/Asia/Shanghai:/etc/localtime:ro
+    restart: always
 
   php:
     build:
       ./php/
     expose:
-      - 9000
+      - 9000:9000
     networks:
       - net-php
       - net-mysql
@@ -29,6 +30,7 @@ services:
       - ./php/conf/php-fpm.conf:/usr/local/etc/php-fpm.d/www.conf:rw
       - ./log/php/:/var/log/dnmp/:rw
       - /usr/share/zoneinfo/Asia/Shanghai:/etc/localtime:ro
+    restart: always
 
   mysql:
     image: mysql:5.7.20
@@ -41,6 +43,7 @@ services:
       - ./mysql/data:/var/lib/mysql
       - ./mysql/conf/mysql.cnf:/etc/mysql/conf.d/mysql.cnf:ro
       - /usr/share/zoneinfo/Asia/Shanghai:/etc/localtime:ro
+    restart: always
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=lnmp
@@ -51,6 +54,7 @@ services:
     image: redis:4.0
     ports:
       - 6379:6379
+    restart: always
     networks:
       - net-redis
 
